Fix: override scrollbar defaults for sidebar for firefox.

--- a/resources/css/common.css
+++ b/resources/css/common.css
@@ -1321,7 +1321,7 @@ a.tag:hover {
 /* Hide scrollbar for IE, Edge and Firefox */
 .hide-scrollbar {
     -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
+    scrollbar-width: none !important;  /* Firefox */
 }
 /* Hide scrollbar for Chrome, Safari and Opera */
 .hide-scrollbar::-webkit-scrollbar {
